--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,7 @@
     "mysql": "^2.18.1"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "dotenv": "^16.0.3",
     "nodemon": "^2.0.20"
   }
