--- a/mytsapp/package.json
+++ b/mytsapp/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "@headlessui/react": "^1.7.3",
     "@heroicons/react": "^2.0.12",
+    "@reduxjs/toolkit": "^1.9.0",
     "axios": "^1.1.3",
     "next": "12.3.1",
+    "next-redux-wrapper": "^8.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^6.4.3",
+    "redux-persist": "^6.0.0",
+    "stream-consumers": "^1.0.2"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
@@ -23,7 +29,6 @@
     "eslint": "8.25.0",
     "eslint-config-next": "12.3.1",
     "postcss": "^8.4.18",
-    "tailwindcss": "^3.1.8",
-    "typescript": "4.8.4"
+    "tailwindcss": "^3.1.8"
   }
 }
